# summerschool-2025

./: README.md  pyproject.toml
backend/: app.py  models.py
backend/routers/: day1.py  day2.py  day3.py  day4.py  day5.py
backend/routers/day1/: README_DAY_1.md  router.py
backend/routers/day2/: README.md  README_DAY_2.md  router.py
backend/routers/day3/: README_DAY_3.md  router.py
backend/routers/day4/: README_DAY_4.md  router.py
ui/: Home.py  utils.py
ui/pages/: 2_Day_2.py  3_Day_3.py  5_Day_5.py
