[project]
name = "summerschool-2025"
version = "0.1.0"
description = "Summerschool 2025 labs with FastAPI backend and Streamlit UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "streamlit>=1.31",
  "ruff>=0.5",
]

[tool.uv]
package = false
